...
        },
        floatingActionButton = {
            FloatingActionButton(
                onClick = { navController.navigate("add_person/student") },
                containerColor = StudentGreen
            ) {
                Icon(Icons.Default.Add, "Add Student", tint = Color.White)
            }
        },
        snackbarHost = { SnackbarHost(snackbarHostState) },
        content = { padding ->
            Box(
                modifier = Modifier
...
